--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -5,8 +5,7 @@
     <title>Phone Number and Message Submission</title>
       
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <link href="css/style.css" rel="stylesheet" type="text/css"
-	media="screen" />
+    <link href="css/style.css" rel="stylesheet" type="text/css"/>
 </head>
 <body>
     <p th:text="'Welcome, please enter your name, number and a text message below'" />
